@startuml Authenticator

[*]-d->Unauthenticated

state Unauthenticated
Unauthenticated : access = null
Unauthenticated : readTokenInfo.isUninitialized = true
note right of Unauthenticated
  Query state is ephemeral,
  defaults to isUninitialized
end note

state Loading
Loading : access = null
Loading : readTokenInfo.isLoading = true

state Authenticated
Authenticated : access = {}

state Error
Error : access = null
Error : readTokenInfo.isError = true

Unauthenticated -d-> Loading : onSubmit
Loading -d-> Authenticated : fulfilled
Loading -d-> Error : rejected
Authenticated -u-> Unauthenticated : onReset
Error --> Loading : onSubmit

@enduml